# greatest_running_table

./: .pre-commit-config.yaml  .python-version  README.md  pyproject.toml  ruff.toml  ty.toml
.github/workflows/: docs.yml  update-precommit.yml
ideation/: main.ipynb
src/greatest_running_table/: create_parquet.py
src/greatest_running_table/utils/: altairconfig.py  logger.py
tests/: __init__.py
