[project]
name = "greatest_running_table"
version = "0.1.0"
description = ""
authors = [
    { name = "Thomas Camminady", email = "0milieux_member@icloud.com" }
]
readme = "README.md"
repository = "https://github.com/thomascamminady/greatest_running_table"
homepage = "https://github.com/thomascamminady/greatest_running_table"
documentation = "https://thomascamminady.github.io/greatest_running_table"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.4.1",
    "great-tables>=0.20.0",
    "gt-extras>=0.0.8",
    "ipykernel>=7.1.0",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "polars>=1.35.1",
    "polarspiper>=0.4.0",
    "pyarrow>=22.0.0",
    "selenium>=4.38.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "regex>=2024.11.6",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "rich>=13.9.4",
    "ruff>=0.14.3",
    "ty>=0.0.1a25",
]
docs = [
    "pdoc>=14.0.0",
]

[tool.pylint.MASTER]
disable=[
    "C0114", # missing-module-docstring
    "C0115", # missing-class-docstring
]

[tool.pyright]
exclude = [
    ".venv/*",
    ".mypy_cache/*",
    ".pytest_cache/*",
    ".ruff_cache/*",
    ".ipynb_checkpoints/*",
    ".git/*",
    ".github/*",
    "**/__pycache__/*",
    "**/*.pyc",
]
